# qstdlib

./: CMakeLists.txt  LICENSE  README.md
test/: CMakeLists.txt  head.hpp  main.cpp  test.cpp  test.h  test_p.cpp  test_p.h  testprivate.cpp  testprivate.h
